Fixed white space issue in page footer

--- a/app/themes/mcc-cycling/assets/less/partials/footer.less
+++ b/app/themes/mcc-cycling/assets/less/partials/footer.less
@@ -3,6 +3,12 @@ footer.widgetarea {
   padding: 30px 15px;
 
   .widget.widget_twitter_timeline {
+    margin-bottom: 350px;
+
+    @media (min-width: @screen-sm-min) {
+      margin-bottom: 150px;
+    }
+
     h3 {
       .text-hide();
       background-image: url('/app/uploads/twitter.png');
@@ -17,7 +23,8 @@ footer.widgetarea {
 
 .footer-logos {
   width: 100%;
-  margin-top: 30px;
+  position: absolute;
+  bottom: 0;
 
   .logos {
     padding: 30px 0;
